More cool website

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,15 +4,72 @@
   <title>Cool Webpage</title>
 </head>
 <body>
-  <h1>Heading 1</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis necessitatibus explicabo delectus dolore ipsum aliquid doloribus libero dolores id vitae?</p>
-  <h2>Heading 2</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor fugiat omnis molestiae quo sit tenetur praesentium cum laborum perferendis a.</p>
-  <h3>Heading 3</h3>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ducimus, incidunt sit beatae tempore quam accusantium similique earum reprehenderit distinctio!</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolorem saepe impedit suscipit nulla vero doloremque nemo nisi, minus mollitia ea cupiditate a possimus quia laborum aperiam autem, maiores modi?</p>
-  <a href="www.google.com"><img src="https://www.holbertonschool.com/holberton-logo.png" alt="Holberton school"></a><br>
+  <!-- Header -->
+  <header>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </header>
 
-  <a href="tweets.html">Click to see Tweet</a>
+  <!-- Main -->
+  <main>
+    <article>
+      <h1>Heading 1</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis necessitatibus explicabo delectus dolore ipsum aliquid doloribus libero dolores id vitae?</p>
+      <h2>Heading 2</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor fugiat omnis molestiae quo sit tenetur praesentium cum laborum perferendis a.</p>
+      <h3>Heading 3</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ducimus, incidunt sit beatae tempore quam accusantium similique earum reprehenderit distinctio!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolorem saepe impedit suscipit nulla vero doloremque nemo nisi, minus mollitia ea cupiditate a possimus quia laborum aperiam autem, maiores modi?</p>
+      <a href="www.google.com"><img src="https://www.holbertonschool.com/holberton-logo.png" alt="Holberton school"></a><br>
+
+      <a href="tweets.html">Click to see Tweet</a>
+    </article>
+
+    <!-- Aside -->
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+
+    <!-- Table -->
+    <article>
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
+    </article>
+  </main><br>
+
+
+  <footer>Made by Damilola - <a href="twitter.com/dharmilorla20" target="_blank">here</a></footer>
 </body>
 </html>
