--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -4,8 +4,30 @@
   <title>Tweets</title>
 </head>
 <body>
-  <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I’m owing like 60 people salary per month across 3 organisations, if I reach out to you for partnership or something and you air me, if you later reach out to me ( I don’t care about the reason) I’ll still jump on the offer. I don’t have ego or shame. I’m hustling and if it…</p>&mdash; Name cannot be blank (@hackSultan) <a href="https://twitter.com/hackSultan/status/1677282554884259843?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <!-- Header -->
+  <header>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </header>
 
-  <a href="index.html">Go back to Homepage</a>
+  <!-- Main -->
+  <main>
+    <article>
+      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I’m owing like 60 people salary per month across 3 organisations, if I reach out to you for partnership or something and you air me, if you later reach out to me ( I don’t care about the reason) I’ll still jump on the offer. I don’t have ego or shame. I’m hustling and if it…</p>&mdash; Name cannot be blank (@hackSultan) <a href="https://twitter.com/hackSultan/status/1677282554884259843?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+      <a href="index.html">Go back to Homepage</a>
+    </article>
+
+    <!-- Aside -->
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <!-- Footer -->
+  <footer>Made by Damilola - <a href="twitter.com/dharmilorla20" target="_blank">here</a></footer>
 </body>
 </html>
